[flake8]
exclude = .git ,__pycache__, .venv
max-line-length = 120
max-complexity = 8
ignore = F403 , F405 , W293 , W504 ,E123, E127, E731, E122, E128, F811

[metadata]
name = Morning assistant
author = alone
version = 1.0.0
license = MIT
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10


